[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE
name = jaraco.clipboard
author = Jason R. Coombs
author_email = jaraco@jaraco.com
description = Multi-format, cross-platform clipboard library
long_description = file:README.rst
url = https://github.com/jaraco/jaraco.clipboard
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3

[options]
packages = find:
namespace_packages = jaraco
include_package_data = true
python_requires = >=2.7
install_requires =
	jaraco.windows >= 3.4; sys_platform=="win32"
	richxerox >= 1.0.1; sys_platform=="darwin"
	pyperclip >= 1.6; sys_platform=="linux2" or sys_platform=="linux"
setup_requires = setuptools_scm >= 1.15.0

[options.extras_require]
testing =
	# upstream
	pytest >= 3.5, !=3.7.3
	pytest-checkdocs
	pytest-flake8

	# local

docs =
	# upstream
	sphinx
	jaraco.packaging >= 3.2
	rst.linker >= 1.9

	# local

[options.entry_points]
