[metadata]
license_file = LICENSE
name = jaraco.clipboard
author = Jason R. Coombs
author_email = jaraco@jaraco.com
description = Multi-format, cross-platform clipboard library
long_description = file:README.rst
url = https://github.com/jaraco/jaraco.clipboard
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only

[options]
packages = find:
include_package_data = true
python_requires = >=3.6
install_requires =
	jaraco.windows >= 5.1; sys_platform=="win32"
	richxerox >= 1.0.1; sys_platform=="darwin"
	pyperclip >= 1.6; sys_platform=="linux2" or sys_platform=="linux"
setup_requires = setuptools_scm[toml] >= 3.4.1

[options.extras_require]
testing =
	# upstream
	pytest >= 3.5, !=3.7.3
	pytest-checkdocs >= 1.2.3
	pytest-flake8
	pytest-black >= 0.3.7; python_implementation != "PyPy"
	pytest-cov
	pytest-mypy; python_implementation != "PyPy"
	# jaraco/skeleton#22
	jaraco.test >= 3.2.0

	# local
	pygments

docs =
	# upstream
	sphinx
	jaraco.packaging >= 3.2
	rst.linker >= 1.9

	# local

[options.entry_points]
