[metadata]
name = jaraco.clipboard
author = Jason R. Coombs
author_email = jaraco@jaraco.com
description = Multi-format, cross-platform clipboard library
long_description = file:README.rst
url = https://github.com/jaraco/jaraco.clipboard
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only

[options]
include_package_data = true
python_requires = >=3.8
install_requires =
	jaraco.windows >= 5.1; sys_platform=="win32"
	richxerox >= 1.0.1; sys_platform=="darwin"
	pyperclip >= 1.6; sys_platform=="linux2" or sys_platform=="linux"

[options.extras_require]
testing =
	# upstream
	pytest >= 6
	pytest-checkdocs >= 2.4
	pytest-cov
	pytest-mypy; \
		# workaround for jaraco/skeleton#22
		python_implementation != "PyPy"
	pytest-enabler >= 2.2
	pytest-ruff >= 0.2.1

	# local
	pygments

docs =
	# upstream
	sphinx >= 3.5
	# workaround for sphinx/sphinx-doc#11662
	sphinx < 7.2.5
	jaraco.packaging >= 9.3
	rst.linker >= 1.9
	furo
	sphinx-lint

	# local

[options.entry_points]
